--- a/For_Power/macros/redeem.cfg
+++ b/For_Power/macros/redeem.cfg
@@ -300,10 +300,10 @@
             [if]
               [variable]
                 name=upgrade_count
-                greater_than=7
+                greater_than=8
               [/variable]
               [then]
-                {VARIABLE upgrade_count 7}
+                {VARIABLE upgrade_count 8}
               [/then]
             [/if]
             [switch]
@@ -521,6 +521,20 @@
                   [/value]
                 [/set_variables]
                 {VARIABLE redeemer.modifications.advance[$redeemer.modifications.advance.length].id redeem_mastery}
+              [/case]
+              [case]
+                value=8
+                [set_variables]
+                  name=redeemer.modifications.advance[$redeemer.modifications.advance.length]
+                  mode=replace
+                  [value]
+                    id=redeem_advance
+                    [effect]
+                      apply_to=hitpoints
+                      increase_total=2
+                    [/effect]
+                  [/value]
+                [/set_variables]
               [/case]
             [/switch]
             [unstore_unit]
