--- a/For_Power/macros/soul_eater.cfg
+++ b/For_Power/macros/soul_eater.cfg
@@ -87,8 +87,7 @@
 					  greater_than_equal_to=$eater.variables.max_devour_count
 				  [/variable]
 				  [then]
-					  {VARIABLE question.question "<span size='large'>Which new advancement path should our victorious unit get?</span>"}
-            {FOREACH eater.modifications.advance i}
+					  {FOREACH eater.modifications.advance i}
 						[if]
 							[variable]
 								name=eater.modifications.advance[$i].id
@@ -153,20 +152,10 @@
 							[/then]
 						[/if]
 					  {NEXT i}
-				    [set_variable]
-						  name=question_asked
-						  [join]
-							  variable=question
-							  key=question
-							  separator="
-"
-							  remove_empty=yes
-						  [/join]
-				    [/set_variable]
 					  {VARIABLE chose 0}
 					  [message]
 						  speaker=narrator
-						  message= _ "$question_asked"
+						  message= _ "<span size='large'>Which new advancement path should our victorious unit get?</span>"
               [option]
 							  message=_ "Regeneration (advancements improving the regeneration)"
 							  [command]
@@ -245,7 +234,6 @@
 								  [/variable]
 							  [/show_if]
 						  [/option]
-            [/message]
 						  [option]
 							  message=_ "Health (+7 to hp advancements)"
 							  [command]
@@ -307,6 +295,7 @@
                   [/and]
 							  [/show_if]
 						  [/option]
+            [/message]
 					  [if]
 						  [variable]
 							  name=chose
