--- a/For_Power/mainline-strings.cfg
+++ b/For_Power/mainline-strings.cfg
@@ -51,6 +51,10 @@ _ "faerie fire"
 _ "shadow wave"
 #enddef
 
+#define STR_CHILL_TEMPEST
+_ "chill tempest"
+#enddef
+
 #textdomain wesnoth-help
 
 #define ILLUMINATES_DESCRIPTION
