--- a/For_Power/scenarios/02_Flight.cfg
+++ b/For_Power/scenarios/02_Flight.cfg
@@ -166,7 +166,7 @@
 			speaker=Clare
 			message=_" Take care of yourself."
 		[/message]
-    # keep side 2' gold for later
+    # carry over side 2' gold to scenario 4
     [store_gold]
       side=2
       variable=glacyn_gold
