--- a/For_Power/scenarios/03_The_Earl.cfg
+++ b/For_Power/scenarios/03_The_Earl.cfg
@@ -108,7 +108,7 @@
 		[/message]
 		[message]
 			speaker=guard2
-			message=_"Very well. Procced down the hallway, the Earl’s throne lies at the far end."
+			message=_"Very well. Proceed down the hallway, the Earl’s throne lies at the far end."
 		[/message]
 		[move_unit]
 		  id=Lemyr
