--- a/For_Power/scenarios/06_On_The_Road.cfg
+++ b/For_Power/scenarios/06_On_The_Road.cfg
@@ -181,7 +181,7 @@
 		[message]
 		  speaker=narrator
 		  image=wesnoth-icon.png
-		  message=_"You can't recruit any units and neither recall some ones."
+		  message=_"You cannot recruit any units and neither recall some ones."
 		[/message]
 		{PLACE_IMAGE scenery/signpost.png 20 1}
   [/event]
@@ -198,7 +198,7 @@
     name=side 3 turn 3
     [message]
 		  speaker=Tinry
-		  message=_"They have no more grunts. It will be easy guys."
+		  message=_"They have no more grunts. It will be easy, guys."
 		[/message]
   [/event]
     
@@ -211,7 +211,7 @@
     [/filter]
     [message]
 		  speaker=Tinry
-		  message=_"You are leaving us lady?"
+		  message=_"You are leaving us, lady?"
 		[/message]
 		[message]
 		   speaker=Clare
@@ -240,7 +240,7 @@
     name=victory
     [message]
 		  speaker=Tinry
-		  message=_"Thank you for your help lady. What is your name?"
+		  message=_"Thank you for your help, lady. What is your name?"
 		[/message]
 		[message]
 		  speaker=Clare
@@ -258,12 +258,8 @@
 		  speaker=Tinry
 		  message=_"We hate orcs. We will help you. Yes guys?"
 		[/message]
-		[role]
-		  role=hater
-		  type=Footpad
-		[/role]
 		[message]
-		  role=hater
+		  type=Footpad
 		  message=_"Yeees. We will kill every orc who we meet."
 		[/message]
 		[message]
@@ -272,7 +268,7 @@
 		[/message]
 		[message]
 		  speaker=Tinry
-		  message=_"Yes lady."
+		  message=_"Yes, lady."
 		[/message]
 		{MODIFY_UNIT id=Tinry canrecruit no}
 		{MAKE_HERO Tinry}
