--- a/For_Power/scenarios/08_The_Teacher.cfg
+++ b/For_Power/scenarios/08_The_Teacher.cfg
@@ -190,7 +190,7 @@
 		  [show_if]
 		    [variable]
 		      name=templevel
-		      numerical_equals=2 # red mage
+		      equals=2 # red mage
 		    [/variable]
 		  [/show_if]
 		[/message]
@@ -200,7 +200,7 @@
 		  [show_if]
 		    [variable]
 		      name=templevel
-		      numerical_equals=3 # silver mage
+		      equals=3 # silver mage
 		    [/variable]
 		  [/show_if]
 		[/message]
