--- a/For_Power/scenarios/09b_Learning_Dark_Arts.cfg
+++ b/For_Power/scenarios/09b_Learning_Dark_Arts.cfg
@@ -132,7 +132,7 @@
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"Alas this is only a begining. You true power is not in you but in your minions."
+		  message=_"Alas this is only a begining. Your true power is not in you but in your minions."
 		[/message]
 		[message]
 		  speaker=Clare
