--- a/For_Power/scenarios/12_An_Orchish_Town.cfg
+++ b/For_Power/scenarios/12_An_Orchish_Town.cfg
@@ -160,16 +160,16 @@
 	  [filter]
 	    side=2
 	  [/filter]
-	  [filter_second]
-      ability=plague
-    [/filter_second]
+	  [filter_second_attack]
+      special=plague
+    [/filter_second_attack]
     [message]
       speaker=Clare
       message=_"Rise and serve me, you orcish scum!"
     [/message]
     [message]
       speaker=orc
-      message=_"What the hell do you think that you are doing?"
+      message=_"What the hell do you think you are doing?"
     [/message]
     [message]
       speaker=Clare
