--- a/For_Power/scenarios/13_The_Assassin.cfg
+++ b/For_Power/scenarios/13_The_Assassin.cfg
@@ -206,33 +206,9 @@
 	  [/message]
 	  [message]
 	    speaker=Clare
-	    message=_"Yes, but Merissa cannot see it."
-	    [show_if] # it was deprecated because I need her in the next scenario
-	      [variable] # without her it would not have the right dialogue
-	        name=merissa_alive
-	        equals=no
-	      [/variable]
-	    [/show_if]
-	  [/message]
-	  [message]
-	    speaker=Clare
+	    # she is a kind and really good person even a hero even if she do not want to hear it
+      # check scenario 17a
 	    message=_"Yes, but some of your friends cannot see it."
-	    [show_if] # she is a kind and really good person even the hero even if she do not want to hear it
-	      [variable] # check scenario 17a
-	        name=merissa_alive
-	        equals=yes
-	      [/variable]
-	    [/show_if]
-	  [/message]
-	  [message]
-	    speaker=Tinry
-	    message=_"Yes, I will miss Merissa very much but she knows that her death was for the greatest good."
-	    [show_if] # again the same comment this would be nice that Tinry likes Merissa alas
-	      [variable]
-	        name=merissa_alive
-	        equals=no
-	      [/variable]
-	    [/show_if]
 	  [/message]
 	  [message]
 	    speaker=Tinry
@@ -252,16 +228,6 @@
 	    speaker=Merissa
 	    message=_"You are right."
 	  [/message] # she finally agrees with him
-	  [message]
-	    speaker=Mubryn
-	    message=_"You are right."
-	    [show_if]
-	      [variable]
-	        name=merissa_alive
-	        equals=no
-	      [/variable]
-	    [/show_if]
-	  [/message]
 	  [endlevel]
 		  result=victory
 		  bonus=no
@@ -314,7 +280,7 @@
 	  [/message]
 	  [message]
 	    id=Clare
-	    message=_"But at first I let my minions rest in peace."
+	    message=_"But at first, I will grant some rest to my minions."
 	  [/message]
 	  [endlevel]
 		  result=victory
