--- a/For_Power/scenarios/14b_More_Power.cfg
+++ b/For_Power/scenarios/14b_More_Power.cfg
@@ -89,7 +89,7 @@
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"You do not need to look like 'a pack of bones'. There is an another way."
+		  message=_"You do not need to look like 'a pack of bones'. There is an other way."
 		[/message]
 		[message]
 		  speaker=Clare
@@ -109,7 +109,7 @@
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"Of course. It would be so easy. So where can I find it, master?"
+		  message=_"Of course, it would be very easy. So where can I find it, master?"
 		[/message]
 		[message]
 		  speaker=Haldar
