--- a/For_Power/scenarios2/07_West_Front.cfg
+++ b/For_Power/scenarios2/07_West_Front.cfg
@@ -179,12 +179,12 @@
     [/message]
     [message]
       speaker=Ralenyth
-      message=_"Anyhow thank you for arriving. With you our chances to defeat these undeads are much better."
+      message=_"Anyhow, thank you for arriving. With you our chances to defeat these undeads are much better."
     [/message]
     [message]
       speaker=narrator
 		  image=wesnoth-icon.png
-      message=_"You got some level 2 units to recall. They were earl Menvan's soldiers and now they serve Clare."
+      message=_"You have got some level 2 units to recall. They were earl Menvan's soldiers and now they serve Clare."
     [/message]
     {CAPTURE_VILLAGE 1 42 9}
     {CAPTURE_VILLAGE 1 42 12}
@@ -217,6 +217,7 @@
   [event]
     name=die
     id=storing_killed_soldiers
+    first_time_only=no
     [filter]
       side=1,2
     [/filter]
@@ -340,7 +341,7 @@
     [/fire_event]
     [message]
       speaker=Ralenyth
-      message=_"He is using our deads against us!"
+      message=_"He is using our dead against us!"
     [/message]
   [/event]
   
