--- a/For_Power/scenarios2/12_Escape_from_prison.cfg
+++ b/For_Power/scenarios2/12_Escape_from_prison.cfg
@@ -143,15 +143,15 @@
     [/message]
     [message]
       speaker=Clare
-      message=_"It is not only about rasing undeads. There are a lot of information about liches as well."
+      message=_"It is not only about rasing undead. There are a lot of information about liches as well."
     [/message]
     [message]
       speaker=Merissa
-      message=_"So we wait in prison to be executed and you read a book? And about a such thing?"
+      message=_"So we wait in prison to be executed and you are reading a book? And about such a thing?"
     [/message]
     [message]
       speaker=Clare
-      message=_"I am sorry. I do not want us to be executed but I have no idea what to do."
+      message=_"I am sorry. I do not want us to be executed, but I have no idea what to do."
     [/message]
     [message]
       speaker=Merissa
@@ -163,11 +163,11 @@
     [/message]
     [message]
       speaker=Merissa
-      message=_"I expected it. I think you have to raise some undeads by the book you have read."
+      message=_"I expected it. I think you have to raise some undead by the book you have read."
     [/message]
     [message]
       speaker=Clare
-      message=_"No way! I will not do a such think!"
+      message=_"No way! I will not do such a think!"
     [/message]
     [message]
       speaker=Merissa
@@ -179,7 +179,7 @@
     [/message]
     [message]
       speaker=narrator
-      message=_"After three weeks of practise Clare was able to raise some human corpses."
+      message=_"After three weeks of practice Clare was able to raise some human corpses."
     [/message]
     {LOYAL_UNDEAD_UNIT 1 (Walking Corpse) 8 1}
     {LOYAL_UNDEAD_UNIT 1 (Walking Corpse) 10 1}
@@ -230,7 +230,7 @@
     {MOVE_UNIT id=Tinry 9 3}
     [message]
       speaker=Tinry
-      message=_"Yes it fits here. (unlocking the doors) Let's leave this cell, friends."
+      message=_"Yes, it fits here. (unlocking the doors) Let's leave this cell, friends."
     [/message]
     [message]
       x,y=9,4
@@ -383,7 +383,7 @@
     [/message]
     [message]
       x,y=9,4
-      message=_"Yes, of course. (unlocking the doors) Anything next?"
+      message=_"Yes, of course. (unlocking the doors) Anything else?"
     [/message]
     [message]
       speaker=Clare
@@ -442,7 +442,7 @@
     [/message]
     [message]
       speaker=Clare
-      message=_"Anyhow try to knock them out just, please. I do not want to have their blood in my hands. They are not bad people."
+      message=_"Anyhow try to knock them out just, please. I do not want to have their blood on my hands. They are not bad people."
     [/message]
     {CLEAR_VARIABLE key_found}
   [/event]
