--- a/For_Power/scenarios2/13a_Escape_from_Dwarven_Doors.cfg
+++ b/For_Power/scenarios2/13a_Escape_from_Dwarven_Doors.cfg
@@ -215,7 +215,7 @@
 		[/filter_second]
 		[message]
 			speaker=second_unit
-			message= _ "What's this?! ... An escaped prison! I think I will be rewarded for reporting it."
+			message= _ "What's this?! ... An escaped prisoner! I think I will be rewarded for reporting it."
 		[/message]
 		[message]
       speaker=unit
@@ -233,7 +233,7 @@
 		[/filter_second]
 		[message]
 			speaker=unit
-			message= _ "What's this?! ... An escaped prison! I think I will be rewarded for reporting it."
+			message= _ "What's this?! ... An escaped prisoner! I think I will be rewarded for reporting it."
 		[/message]
 		[message]
       speaker=second_unit
@@ -366,7 +366,7 @@
     name=time over
     [message]
       speaker=Clare
-      message=_"The sun is rising and my spell is stopping to work. We are revealed!"
+      message=_"The sun is rising and my spell is ceasing to work. We are revealed!"
     [/message]
   [/event]
 [/scenario]
