--- a/For_Power/scenarios3/02_More_undeads.cfg
+++ b/For_Power/scenarios3/02_More_undeads.cfg
@@ -198,7 +198,7 @@
     [/filter_second]
     [message]
       speaker=necro
-      message=_"Ha ha I said it. Even his undeads are physically handicapped."
+      message=_"Ha ha I said it. Even his undead are physically handicapped."
     [/message]
   [/event]
   
@@ -596,11 +596,11 @@
     [/message]
     [message]
       speaker=Tinry
-      message=_"But I have to ask again. How did you manage you still look like you did the day we met first time? I thought lich's body decays with time."
+      message=_"But I have to ask again. How did you manage you still look like you did the day we met first time? I thought liches' body decays with time."
     [/message]
     [message]
       speaker=Clare
-      message=_"Usually yes but I used a poison which can it be achieved with. It is very rare but a few days ago I found it in one of my advisor's room."
+      message=_"Usually yes but I used a poison which allows you to achieve it. It is very rare, but a few days ago I found it in one of my advisor's room."
     [/message]
     [message]
       speaker=Merissa
@@ -608,7 +608,7 @@
     [/message]
     [message]
       speaker=Clare
-      message=_"If you really want it yes. I can even learn you to use magic. And what about you, Tinry?"
+      message=_"If you really want it, yes. I can even teach you to use magic. And what about you, Tinry?"
     [/message]
     [message]
       speaker=Tinry
