--- a/For_Power/scenarios3/03_Meeting_with_Ravanal.cfg
+++ b/For_Power/scenarios3/03_Meeting_with_Ravanal.cfg
@@ -113,7 +113,7 @@
     [/message]
     [message]
       speaker=Clare
-      message=_"I never heard about him."
+      message=_"I have never heard about him."
     [/message]
     [message]
       speaker=Ravanal
@@ -121,7 +121,7 @@
     [/message]
     [message]
       speaker=Clare
-      message=_"Yes I encountered some undeads but a woman led them. But later they got reinforcements. They outnumbered us but later left."
+      message=_"Yes I encountered some undeads but a woman led them. But later they got reinforcements. They outnumbered us, but later, they left."
     [/message]
     [message]
       speaker=Ravanal
