--- a/For_Power/scenarios3/05_Dealing_with_trolls.cfg
+++ b/For_Power/scenarios3/05_Dealing_with_trolls.cfg
@@ -331,7 +331,7 @@
     [/message]
     [message]
       speaker=Amiwen
-      message=_"No, they are very dark and close. It may be good for you but I prefer bright and wide forests. Anyhow we are doomed."
+      message=_"No, they are very dark and close. It may be good for you, but I prefer bright and wide forests. Anyhow we are doomed."
     [/message]
   [/event]
   
