--- a/For_Power/scenarios3/08_The_Elves.cfg
+++ b/For_Power/scenarios3/08_The_Elves.cfg
@@ -206,7 +206,7 @@
     [/message]
     [message]
       speaker=Clare
-      message=_"In Morbivord's castle. He needs to rest. But we have to settle the matter with Morbivord. He and his wife command legions of undeads."
+      message=_"In Morbivord's castle. He needs to rest. But we have to settle the matter with Morbivord. He and his wife command legions of undead."
     [/message]
     [message]
       speaker=Clare
@@ -214,7 +214,7 @@
     [/message]
     [message]
       speaker=Amiwen
-      message=_"Can you see that forest? There live elves there. Maybe they could help us."
+      message=_"Can you see that forest? Elves live there. Maybe they could help us."
     [/message]
     [message]
       speaker=Clare
@@ -293,7 +293,7 @@
     [/message]
     [message]
       speaker=elf
-      message=_"Actually yes. Earldom of lord Morbivord which is not so far from this place is swarming with them. They sometimes attack us but not co-ordinated maybe when they lose their way."
+      message=_"Actually yes. Earldom of lord Morbivord which is not so far from this place is swarming with them. They sometimes attack us but not coordinated maybe when they lose their way."
     [/message]
     [message]
       speaker=Lethalia
@@ -301,7 +301,7 @@
     [/message]
     [message]
       speaker=Lemyr
-      message=_"No, we fight him but his undead army is too big. We wanted to ask you for help with them."
+      message=_"No, we were fighting him but his undead army is too large. We wanted to ask you for help with them."
     [/message]
     [message]
       speaker=elf
@@ -317,7 +317,7 @@
     [/message]
     [message]
       speaker=Lethalia
-      message=_"Maybe he is impersonating a paladin. Maybe he came through hard times of life and fell from grace, it happens. Sometimes you prefer saving the life of a beloved one over saving the lives of a group of people you do not know. Sometimes you realise (realize pokud to píšeš v američtině) that the life of piety does not fill your heart. I have seen a lot of people who were once paladins and fell, continuing behaving like paladins but they were not paladins. And neither of them was a necromancers."
+      message=_"Maybe he is impersonating a paladin. Maybe he came through hard times of life and fell from grace, it happens. Sometimes you prefer saving the life of a beloved one over saving the lives of a group of people you do not know. Sometimes you realise that the life of piety does not fill your heart. I have seen a lot of people who were once paladins and fell, continuing behaving like paladins but they were not paladins. And neither of them was a necromancers."
     [/message]
     [message]
       speaker=elf
