--- a/For_Power/scenarios3/11_On_the_way_back.cfg
+++ b/For_Power/scenarios3/11_On_the_way_back.cfg
@@ -231,7 +231,7 @@
         [/message]
         [message]
           speaker=Clare
-          message=_"We cannot just let her behind. She will surely die here. We will rise her."
+          message=_"We cannot just let her behind. She will surely die here. We will raise her."
         [/message]
         [message]
           speaker=Lemyr
