--- a/For_Power/units/Blessed_Mage.cfg
+++ b/For_Power/units/Blessed_Mage.cfg
@@ -1,4 +1,4 @@
-#textdomain wesnoth-For_Power
+#textdomain wesnoth-units
 
 [unit_type]
   id=Blessed Mage
@@ -112,6 +112,7 @@ Physically frail, and lacking familiarity with combat, magi do possess certain a
       image="units/human-magi/mage+female.png"
     [/frame]
   [/attack_anim]
+#textdomain wesnoth-For_Power
   [abilities]
     [regenerate]
       id=slowing_poison
@@ -185,8 +186,10 @@ Physically frail, and lacking familiarity with combat, magi do possess certain a
   [/advancement]
 [/unit_type]
 
+#textdomain wesnoth-units
+
 [unit_type]
-  id=Blessed Red  Mage
+  id=Blessed Red Mage
   gender=female
   name= _ "female^Red Mage"
   race=human
@@ -290,6 +293,7 @@ Though physically frail, and untrained as warriors, the ‘Red Magi’ have a nu
       image="units/human-magi/red-mage+female.png"
     [/frame]
   [/attack_anim]
+#textdomain wesnoth-For_Power
   [abilities]
     [regenerate]
       value=4
@@ -364,6 +368,8 @@ The unit will heal itself 4 HP per turn. If it is poisoned, these two effects wi
   [/advancement]
 [/unit_type]
 
+#textdomain wesnoth-units
+
 [unit_type]
   id=Blessed Silver Mage
   gender=female
@@ -405,6 +411,7 @@ Silver magi are often more physically adept than other magi, and their skills ar
     fire=50
     cold=50
   [/resistance]
+#textdomain wesnoth-For_Power
   [abilities]
     {ABILITY_TELEPORT}
     [regenerate]
@@ -474,17 +481,17 @@ The unit will heal itself 4 HP per turn. If it is poisoned, it will remove the p
     [frame]
       begin=-300
       end=-225
-      image="units/human-magi/silver-mage+female-attack-magic-1.png"
+      image="units/human-magi/silver-mage+female-attack-magic1.png"
     [/frame]
     [frame]
       begin=-225
       end=-150
-      image="units/human-magi/silver-mage+female-attack-magic-2.png"
+      image="units/human-magi/silver-mage+female-attack-magic2.png"
     [/frame]
     [frame]
       begin=-150
       end=-75
-      image="units/human-magi/silver-mage+female-attack-magic-2.png"
+      image="units/human-magi/silver-mage+female-attack-magic2.png"
       halo=halo/holy/halo6.png
     [/frame]
     [if]
@@ -492,7 +499,7 @@ The unit will heal itself 4 HP per turn. If it is poisoned, it will remove the p
       [frame]
         begin=-75
         end=0
-        image="units/human-magi/silver-mage+female-attack-magic-2.png"
+        image="units/human-magi/silver-mage+female-attack-magic2.png"
         sound={SOUND_LIST:HOLY}
         halo=halo/holy/halo1.png
       [/frame]
@@ -502,7 +509,7 @@ The unit will heal itself 4 HP per turn. If it is poisoned, it will remove the p
       [frame]
         begin=-75
         end=0
-        image="units/human-magi/silver-mage+female-attack-magic-2.png"
+        image="units/human-magi/silver-mage+female-attack-magic2.png"
         sound={SOUND_LIST:HOLY_MISS}
         halo=halo/holy/halo1.png
       [/frame]
@@ -510,30 +517,30 @@ The unit will heal itself 4 HP per turn. If it is poisoned, it will remove the p
     [frame]
       begin=0
       end=75
-      image="units/human-magi/silver-mage+female-attack-magic-2.png"
+      image="units/human-magi/silver-mage+female-attack-magic2.png"
       halo=halo/holy/halo3.png
     [/frame]
     [frame]
       begin=75
       end=150
-      image="units/human-magi/silver-mage+female-attack-magic-2.png"
+      image="units/human-magi/silver-mage+female-attack-magic2.png"
       halo=halo/holy/halo5.png
     [/frame]
     [frame]
       begin=150
       end=200
-      image="units/human-magi/silver-mage+female-attack-magic-2.png"
+      image="units/human-magi/silver-mage+female-attack-magic2.png"
       halo=halo/holy/halo6.png
     [/frame]
     [frame]
       begin=200
       end=250
-      image="units/human-magi/silver-mage+female-attack-magic-2.png"
+      image="units/human-magi/silver-mage+female-attack-magic2.png"
     [/frame]
     [frame]
       begin=250
       end=300
-      image="units/human-magi/silver-mage+female-attack-magic-1.png"
+      image="units/human-magi/silver-mage+female-attack-magic1.png"
     [/frame]
   [/attack_anim]
   [attack_anim]
