--- a/For_Power/utils/chapter1.cfg
+++ b/For_Power/utils/chapter1.cfg
@@ -181,7 +181,7 @@
 		  story= _ "It quickly became known that Clare was highly intelligent, and so her parents sent her to study magic at the Alduin Academy. She was one of the best students on the isle, and completed her studies at the young age of nineteen."
 		[/part]
 		[part]
-		  story= _ "Once her studies were complete, Clare returned to her home village to help out however she could, and improve her magic is possible. The village was peaceful and prosperous."
+		  story= _ "Once her studies were complete, Clare returned to her home village to help out however she could, and improve her magic if possible. The village was peaceful and prosperous."
 		[/part]
 		[part]
 		  story= _ "But it did not last. One day, the peace came to an end, as orcs were spotted on the distant horizon."
