--- a/For_Power/_main.cfg
+++ b/For_Power/_main.cfg
@@ -55,7 +55,7 @@
 
 	icon=data/add-ons/For_Power/images/bookshelf-full.png
 	image=data/add-ons/For_Power/images/magefemale.png
-	description=_ "Follow the tale of the young mage Clare, through an orcish assault on her village, to assassinating someone she liked, and beyond.. Lead her through her battles and choose her path of revenge to end the tale."
+	description=_ "Follow the tale of the young mage Clare, through an orcish assault on her village, to the assassination someone she liked, and beyond.. Lead her through her battles and choose her path of revenge to end the tale."
 
 	first_scenario=01_Defend_the_village
 	{FP_ABOUT}
@@ -72,7 +72,7 @@
   
   icon=data/add-ons/For_Power/images/bookshelf-full.png
 	image=data/add-ons/For_Power/images/magesilverfemale.png
-	description=_ "A few years after defeating the orcish sovereign Clare wanted to go throught some adventures. Accompany her and find out what she saw."
+	description=_ "A few years after defeating the orcish sovereign Clare wanted to go through some adventures. Accompany her and find out what she saw."
 
 	first_scenario=01_Return_of_troubles
 	{FP_ABOUT}
@@ -106,9 +106,26 @@
   
   icon=data/add-ons/For_Power/images/bookshelf-full.png
 	image=data/add-ons/For_Power/images/portraits/Clare.png
-	description=_ "Peace cannot rule the Northlands forever. After about two decades of peace some strange things started to happend there. Discover what (and who) is behind it."
+	description=_ "Peace cannot rule the Northlands forever. After about two decades of peace strange things began to happend there. Discover what (and who) is behind it."
 
 	first_scenario=01_Searching_adventures
+	{FP_ABOUT}
+[/campaign]
+
+[campaign]
+  id=For_Power_V
+  name=_ "For Power Chapter V"
+  abbrev=_"FP5"
+  define=FOR_POWER_V
+  
+  difficulties=EASY,NORMAL,HARD
+  difficulty_descriptions=_"&units/human-magi/mage+female-attack-staff2.png=Battler;*&units/human-magi/white-mage+female-melee-3.png=Campaigner;&units/human-magi/white-cleric+female-mace-3.png=Crusader"
+  
+  icon=data/add-ons/For_Power/images/bookshelf-full.png
+	image=data/add-ons/For_Power/images/magelightfemale.png
+	description=_ "Undead are attacking everywhere. They come from nowhere, cause a lot of havoc and then ... disappear. Nobody is able to defeat them. But a group of unusual heroes is going to fight them. Will they succeed in destroying them once and for all or will the undead manage to destroy everything beautiful in the Northlands (and then in the rest of the Great Continent)? Accompany the heroes and watch their crusade with your own eyes."
+
+	first_scenario=01_Banished_from_paradise
 	{FP_ABOUT}
 [/campaign]
 
@@ -193,6 +210,28 @@
 
 #endif
 
+#ifdef FOR_POWER_V
+
+[binary_path]
+	path=data/add-ons/For_Power/
+[/binary_path]
+
+{~add-ons/For_Power/mainline-strings.cfg}
+{~add-ons/For_Power/utils5}
+{~add-ons/For_Power/macros}
+{~add-ons/For_Power/scenarios5}
+
+[+units]
+	{~add-ons/For_Power/units/Clare_Lich.cfg}
+  {~add-ons/For_Power/units/Lemyr_Lich.cfg}
+  {~add-ons/For_Power/units/Merissa_Lich.cfg}
+  {~add-ons/For_Power/units/Tinry_Shadow_Prince.cfg}
+  {~add-ons/For_Power/units/Amiwen_Elvish_Seer.cfg}
+  {~add-ons/For_Power/units/Blessed_Mage.cfg}
+[/units]
+
+#endif
+
 #ifdef MULTIPLAYER
 
 [binary_path]
@@ -205,6 +244,7 @@
 
 [+units]
 	{~add-ons/For_Power/units/Clare_Lich.cfg}
+  {~add-ons/For_Power/units/Lemyr_Paladin.cfg}
 [/units]
 
 #endif
