--- a/For_Power/scenarios4/02_Bandits.cfg
+++ b/For_Power/scenarios4/02_Bandits.cfg
@@ -181,7 +181,7 @@
     [/message]
     [message]
       speaker=Lemyr
-      message=_"By the way, I must admin that you are pretty fast for somone with full armor, soldier."
+      message=_"By the way, I must admit that you are pretty fast for somone with full armor, soldier."
     [/message]
     [message]
       speaker=guide
